// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetaspaceHeader > should match snapshot (logged in) 1`] = `
"<div class=\\"sm-header h-16\\">
  <div class=\\"fixed top-0 left-0 right-0\\">
    <div class=\\"
              non-responsive-menu
              transition-colors duration-300 ease-in-out h-16
              flex items-center justify-between
              bg-primary\\">
      <div class=\\"header-items\\">
        <div class=\\"flex pl-3 pr-4\\"><img src=\\"/src/assets/images/logo.png\\" alt=\\"Metaspace\\" title=\\"Metaspace\\"></div>
        <div id=\\"upload-link\\" class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Upload</div>,<div id=\\"annotations-link\\" class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Annotations</div>,<div id=\\"datasets-link\\" class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Datasets</div>,<div class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Projects</div>,<div class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Groups</div>
      </div>
      <div class=\\"header-items\\">
        <div class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Detectability</div>,<div class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Help</div>
        <!---->
        <div class=\\"header-items mr-1 lg:mr-2\\">
          <div class=\\"relative flex py-2\\">
            <div id=\\"user-menu\\" class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent\\" activeclass=\\"bg-blue-700\\">Test UserX<div data-v-6bf8fbbe=\\"\\" class=\\"mock-el-tooltip\\" content=\\"undefined has a pending membership request.\\" placement=\\"bottom\\"><span data-v-6bf8fbbe=\\"\\" class=\\"notification\\"></span></div>
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class=\\"responsive-menu transition-colors duration-300 ease-in-out h-16 flex items-start justify-center bg-primary flex-wrap h-full\\">
      <div class=\\"header-items flex-row w-full justify-between\\" style=\\"height: 64px;\\">
        <div class=\\"flex pl-3 pr-4\\"><img src=\\"/src/assets/images/logo.png\\" alt=\\"Metaspace\\" title=\\"Metaspace\\"></div><button class=\\" button-reset flex h-12 w-12 mr-3\\"><svg class=\\"h-full w-full sm-menu-icon\\"></svg>
          <!---->
        </button>
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>"
`;

exports[`MetaspaceHeader > should match snapshot (logged out) 1`] = `
"<div class=\\"sm-header h-16\\">
  <div class=\\"fixed top-0 left-0 right-0\\">
    <div class=\\"
              non-responsive-menu
              transition-colors duration-300 ease-in-out h-16
              flex items-center justify-between
              bg-primary\\">
      <div class=\\"header-items\\">
        <div class=\\"flex pl-3 pr-4\\"><img src=\\"/src/assets/images/logo.png\\" alt=\\"Metaspace\\" title=\\"Metaspace\\"></div>
        <div id=\\"upload-link\\" class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Upload</div>,<div id=\\"annotations-link\\" class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Annotations</div>,<div id=\\"datasets-link\\" class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Datasets</div>,<div class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Projects</div>,<div class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Groups</div>
      </div>
      <div class=\\"header-items\\">
        <div class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Detectability</div>,<div class=\\"mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\" activeclass=\\"bg-blue-700\\">Help</div>
        <div class=\\"header-items mr-1 lg:mr-2\\"><button class=\\"button-reset 
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\">Create account</button>,<button class=\\"button-reset 
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\">Sign in</button></div>
        <!---->
      </div>
    </div>
    <div class=\\"responsive-menu transition-colors duration-300 ease-in-out h-16 flex items-start justify-center bg-primary flex-wrap h-full\\">
      <div class=\\"header-items flex-row w-full justify-between\\" style=\\"height: 64px;\\">
        <div class=\\"flex pl-3 pr-4\\"><img src=\\"/src/assets/images/logo.png\\" alt=\\"Metaspace\\" title=\\"Metaspace\\"></div><button class=\\" button-reset flex h-12 w-12 mr-3\\"><svg class=\\"h-full w-full sm-menu-icon\\"></svg>
          <!---->
        </button>
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>"
`;
